--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     
     <div class="well">
-      <h2Here are my very best links.</h2>
+      <h2>Here are my very best links.</h2>
       <a href="LINK ADDRESS HERE"><p>Oh look, a link!</p></a>
     </div>
   </div>
